--- a/css/main.css
+++ b/css/main.css
@@ -378,6 +378,10 @@ img {
   justify-content: space-between;
 }
 
+.site-nav {
+  display: none;
+}
+
 /* БУРГЕР */
 .burger-btn {
   background-color: transparent;
@@ -386,8 +390,7 @@ img {
   padding: 0;
 }
 
-.burger-icon-icon:hover,
-.burger-icon-icon:focus {
+.burger-btn__icon:hover, .burger-btn__icon:focus {
   fill: var(--hover-color);
 }
 
@@ -400,7 +403,7 @@ img {
   color: var(--accent-color);
 }
 
-.site-nav__logo {
+.site-navigation__logo {
   font-family: 'Raleway', sans-serif;
   text-decoration: none;
   font-size: 26px;
@@ -429,13 +432,13 @@ img {
   }
 }
 
-.site-nav__logo_black {
+.site-navigation__logo_black {
   color: var(--primary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.site-nav__logo:hover > .site-nav__logo_black,
-.site-nav__logo:focus > .site-nav__logo_black {
+.site-navigation__logo:hover > .site-navigation__logo_black,
+.site-navigation__logo:focus > .site-navigation__logo_black {
   color: var(--hover-color);
 }
 
@@ -464,7 +467,6 @@ img {
 }
 
 .site-nav__item {
-  display: none;
   position: relative;
 }
 
