--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -9,6 +9,10 @@
 //   align-items: center;
 // }
 
+.site-nav {
+  display: none;
+}
+
 // .header-contacts__list {
 //   display: flex;
 //   align-items: center;
@@ -26,9 +30,12 @@
   border: none;
   padding: 0;
 }
-.burger-icon-icon:hover,
-.burger-icon-icon:focus {
-  fill: var(--hover-color);
+
+.burger-btn__icon {
+  &:hover,
+  &:focus {
+    fill: var(--hover-color);
+  }
 }
 
 .header-contacts__list {
@@ -40,7 +47,7 @@
   color: var(--accent-color);
 }
 
-.site-nav__logo {
+.site-navigation__logo {
   font-family: 'Raleway', sans-serif;
   text-decoration: none;
   font-size: 26px;
@@ -65,17 +72,17 @@
   }
 }
 
-.site-nav__logo_black {
+.site-navigation__logo_black {
   color: var(--primary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .site-nav__logo:hover > &,
-  .site-nav__logo:focus > & {
+  .site-navigation__logo:hover > &,
+  .site-navigation__logo:focus > & {
     color: var(--hover-color);
   }
 }
 
-// .site-nav__logo_position {
+// .site-navigation__logo_position {
 //   margin-right: 93px;
 // }
 
@@ -118,7 +125,6 @@
 // }
 
 .site-nav__item {
-  display: none;
   position: relative;
 }
 
