--- a/css/main.css
+++ b/css/main.css
@@ -128,6 +128,8 @@ img {
 }
 
 .team-social {
+  display: flex;
+  align-items: center;
   margin-top: 16px;
   padding-left: 32px;
   padding-right: 32px;
@@ -143,6 +145,9 @@ img {
   height: 100%;
   display: block;
   border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -388,6 +393,7 @@ img {
   cursor: pointer;
   border: none;
   padding: 0;
+  margin-left: auto;
 }
 
 .burger-btn__icon:hover, .burger-btn__icon:focus {
@@ -418,17 +424,17 @@ img {
   padding-bottom: 16px;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 767px) {
   .page-header {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .page-header {
-    padding-top: 25px;
-    padding-bottom: 25px;
+    padding-top: 26px;
+    padding-bottom: 26px;
   }
 }
 
@@ -617,12 +623,18 @@ img {
   color: var(--primary-text-color);
 }
 
+.team .text {
+  text-align: center;
+}
+
 .team-info {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
 .team-images {
+  flex-basis: calc(100% / 4 - 270px);
+  margin-left: 30px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
