--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -6,9 +6,9 @@
   color: var(--primary-text-color);
 }
 
-// .team .text {
-//   text-align: center;
-// }
+.team .text {
+  text-align: center;
+}
 
 // .title {
 //   text-align: center;
@@ -26,8 +26,8 @@
 }
 
 .team-images {
-  // flex-basis: calc(100% / 4 - 270px);
-  // margin-left: 30px;
+  flex-basis: calc(100% / 4 - 270px);
+  margin-left: 30px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
