--- a/css/main.css
+++ b/css/main.css
@@ -394,9 +394,37 @@ img {
   border: none;
   padding: 0;
   margin-left: auto;
+  line-height: 0;
 }
 
 .burger-btn__icon:hover, .burger-btn__icon:focus {
+  fill: var(--hover-color);
+}
+
+.mobile-menu {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: #9cb46d;
+}
+
+.mobile-menu__btn {
+  display: flex;
+  justify-content: end;
+  margin-top: 21px;
+  margin-right: 25px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  margin-left: auto;
+  line-height: 0;
+}
+
+.mobile-menu__icon:hover, .mobile-menu__icon:focus {
   fill: var(--hover-color);
 }
 
@@ -425,13 +453,6 @@ img {
 }
 
 @media screen and (min-width: 767px) {
-  .page-header {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
-}
-
-@media screen and (min-width: 1200px) {
   .page-header {
     padding-top: 26px;
     padding-bottom: 26px;
