--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -30,9 +30,40 @@
   border: none;
   padding: 0;
   margin-left: auto;
+  line-height: 0;
 }
 
 .burger-btn__icon {
+  &:hover,
+  &:focus {
+    fill: var(--hover-color);
+  }
+}
+
+.mobile-menu {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgb(156, 180, 109);
+}
+
+.mobile-menu__btn {
+  display: flex;
+  justify-content: end;
+  margin-top: 21px;
+  margin-right: 25px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  margin-left: auto;
+  line-height: 0;
+}
+
+.mobile-menu__icon {
   &:hover,
   &:focus {
     fill: var(--hover-color);
@@ -63,11 +94,6 @@
   padding-bottom: 16px;
 
   @media screen and (min-width: 767px) {
-    padding-top: 26px;
-    padding-bottom: 26px;
-  }
-
-  @media screen and (min-width: 1200px) {
     padding-top: 26px;
     padding-bottom: 26px;
   }
