--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -101,8 +101,7 @@
   height: 50px;
   left: 700px;
   top: 430px;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   &:hover,
   &:focus {
