--- a/css/main.css
+++ b/css/main.css
@@ -412,6 +412,10 @@ img {
 }
 
 .mobile-menu__btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  transform: translateX(100%);
   background-color: transparent;
   cursor: pointer;
   border: none;
