--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -51,6 +51,10 @@
 }
 
 .mobile-menu__btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  transform: translateX(100%);
   background-color: transparent;
   cursor: pointer;
   border: none;
