--- a/css/main.css
+++ b/css/main.css
@@ -383,8 +383,25 @@ img {
   justify-content: space-between;
 }
 
-.site-nav {
-  display: none;
+@media screen and (min-width: 768px) {
+  .site-nav {
+    display: flex;
+    align-items: center;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .site-nav {
+    display: none;
+  }
+}
+
+.header-contacts__list {
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
 }
 
 /* БУРГЕР */
@@ -395,6 +412,12 @@ img {
   padding: 0;
   margin-left: auto;
   line-height: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
 }
 
 .burger-btn__icon:hover, .burger-btn__icon:focus {
@@ -408,13 +431,24 @@ img {
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: #9cb46d;
+  padding: 48px 40px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  background-color: #d7dad1;
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu__btn {
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.mobile-menu__close {
   position: absolute;
-  top: 21px;
-  right: 25px;
+  top: 10px;
+  right: 15px;
   background-color: transparent;
   cursor: pointer;
   border: none;
@@ -428,12 +462,17 @@ img {
 }
 
 .header-contacts__list {
-  display: none;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+}
+
+@media screen and (max-width: 768px) {
+  .header-contacts__list {
+    display: none;
+  }
 }
 
 .site-navigation__logo {
@@ -451,7 +490,7 @@ img {
   padding-bottom: 16px;
 }
 
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .page-header {
     padding-top: 26px;
     padding-bottom: 26px;
@@ -466,6 +505,12 @@ img {
 .site-navigation__logo:hover > .site-navigation__logo_black,
 .site-navigation__logo:focus > .site-navigation__logo_black {
   color: var(--hover-color);
+}
+
+@media screen and (min-width: 768px) {
+  .site-navigation__logo_position {
+    margin-right: 88px;
+  }
 }
 
 /* site-nav */
@@ -498,8 +543,13 @@ img {
 
 /* contacts-link */
 .header-contacts__icon {
-  display: none;
   fill: currentColor;
+}
+
+@media screen and (max-width: 768px) {
+  .header-contacts__icon {
+    display: none;
+  }
 }
 
 .header-contacts__link {
