--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -4,24 +4,28 @@
   justify-content: space-between;
 }
 
-// .site-nav {
-//   display: flex;
-//   align-items: center;
-// }
-
 .site-nav {
-  display: none;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
-// .header-contacts__list {
-//   display: flex;
-//   align-items: center;
-//   font-style: normal;
-//   font-size: 14px;
-//   line-height: 1.71;
-//   letter-spacing: 0.03em;
-//   color: var(--accent-color);
-// }
+.site-nav {
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
+}
+
+.header-contacts__list {
+  // display: flex;
+  // align-items: center;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+}
 
 /* БУРГЕР */
 .burger-btn {
@@ -31,6 +35,10 @@
   padding: 0;
   margin-left: auto;
   line-height: 0;
+
+  @media screen and (min-width: 768px) {
+    display: none;
+  }
 }
 
 .burger-btn__icon {
@@ -47,13 +55,24 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background-color: rgb(156, 180, 109);
+  padding: 48px 40px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  background-color: rgb(215, 218, 209);
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu__btn {
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.mobile-menu__close {
   position: absolute;
-  top: 21px;
-  right: 25px;
+  top: 10px;
+  right: 15px;
   background-color: transparent;
   cursor: pointer;
   border: none;
@@ -70,12 +89,17 @@
 }
 
 .header-contacts__list {
-  display: none;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+}
+
+.header-contacts__list {
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 .site-navigation__logo {
@@ -92,7 +116,7 @@
   padding-top: 16px;
   padding-bottom: 16px;
 
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 768px) {
     padding-top: 26px;
     padding-bottom: 26px;
   }
@@ -108,9 +132,11 @@
   }
 }
 
-// .site-navigation__logo_position {
-//   margin-right: 93px;
-// }
+.site-navigation__logo_position {
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+  }
+}
 
 /* site-nav */
 
@@ -157,8 +183,13 @@
 /* contacts-link */
 
 .header-contacts__icon {
-  display: none;
   fill: currentColor;
+}
+
+.header-contacts__icon {
+  @media screen and (max-width: 768px) {
+    display: none;
+  }
 }
 
 // .header-contacts__icon_position {
