--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,7 @@ img {
 }
 
 .site-nav__link_line:after {
-  content: "";
+  content: '';
   width: 100%;
   position: absolute;
   height: 4px;
@@ -380,7 +380,13 @@ img {
 .page-header__container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+}
+
+@media screen and (min-width: 768px) {
+  .site-navigation {
+    display: flex;
+    align-items: center;
+  }
 }
 
 @media screen and (min-width: 768px) {
@@ -396,12 +402,11 @@ img {
   }
 }
 
-.header-contacts__list {
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
+@media screen and (min-width: 1200px) {
+  .header-contacts__list {
+    display: flex;
+    align-items: center;
+  }
 }
 
 /* БУРГЕР */
@@ -437,28 +442,6 @@ img {
   pointer-events: none;
   background-color: #d7dad1;
   transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: all;
-}
-
-.mobile-menu__close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  padding: 0;
-  margin-left: auto;
-  line-height: 0;
-}
-
-.mobile-menu__icon:hover, .mobile-menu__icon:focus {
-  fill: var(--hover-color);
 }
 
 .header-contacts__list {
@@ -528,6 +511,24 @@ img {
   color: var(--hover-color);
 }
 
+@media screen and (min-width: 768px) {
+  .site-nav__item_position:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .header-contacts__item_position:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts__item_position:not(:last-child) {
+    margin-right: 50px;
+  }
+}
+
 .site-nav__link_current {
   text-decoration: none;
   font-weight: 500;
@@ -535,6 +536,10 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--hover-color);
+}
+
+.site-nav__item {
+  position: relative;
 }
 
 .site-nav__item {
@@ -552,11 +557,26 @@ img {
   }
 }
 
+@media screen and (min-width: 768px) {
+  .header-contacts__icon_position {
+    margin-right: 8px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts__icon_position {
+    margin-right: 10px;
+  }
+}
+
 .header-contacts__link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -565,6 +585,19 @@ img {
 .header-contacts__link:hover, .header-contacts__link:focus {
   text-decoration: none;
   color: var(--hover-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts__link {
+    font-size: 14px;
+    line-height: 1.14;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .header__info {
+    margin-left: auto;
+  }
 }
 
 .hero-title {
