--- a/scss/components/_current.scss
+++ b/scss/components/_current.scss
@@ -1,5 +1,5 @@
 .site-nav__link_line:after {
-  content: "";
+  content: '';
   width: 100%;
   position: absolute;
   height: 4px;
@@ -8,3 +8,9 @@
   bottom: -32px;
   left: 0;
 }
+
+// .site-nav__link_line:after {
+//   @media screen and (min-width: 768px) {
+//     bottom: -32px;
+//   }
+// }
