--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,7 +1,14 @@
 .page-header__container {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  // justify-content: space-between;
+}
+
+.site-navigation {
+  @media screen and (min-width: 768px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .site-nav {
@@ -18,13 +25,10 @@
 }
 
 .header-contacts__list {
-  // display: flex;
-  // align-items: center;
-  font-style: normal;
-  font-size: 14px;
-  line-height: 1.71;
-  letter-spacing: 0.03em;
-  color: var(--accent-color);
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 /* БУРГЕР */
@@ -63,30 +67,30 @@
   transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: all;
-}
+// .mobile-menu.is-open {
+//   opacity: 1;
+//   visibility: visible;
+//   pointer-events: all;
+// }
 
-.mobile-menu__close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  padding: 0;
-  margin-left: auto;
-  line-height: 0;
-}
+// .mobile-menu__close {
+//   position: absolute;
+//   top: 10px;
+//   right: 15px;
+//   background-color: transparent;
+//   cursor: pointer;
+//   border: none;
+//   padding: 0;
+//   margin-left: auto;
+//   line-height: 0;
+// }
 
-.mobile-menu__icon {
-  &:hover,
-  &:focus {
-    fill: var(--hover-color);
-  }
-}
+// .mobile-menu__icon {
+//   &:hover,
+//   &:focus {
+//     fill: var(--hover-color);
+//   }
+// }
 
 .header-contacts__list {
   font-style: normal;
@@ -155,13 +159,27 @@
   }
 }
 
-// .site-nav__item_position:not(:last-child) {
-//   margin-right: 50px;
-// }
+.site-nav__item_position:not(:last-child) {
+  @media screen and (min-width: 768px) {
+    margin-right: 50px;
+  }
+}
 
 // .header-contacts__item_position:not(:last-child) {
-//   margin-right: 50px;
+//   margin-right: 15px;
 // }
+
+.header-contacts__item_position:not(:last-child) {
+  @media screen and (max-width: 1200px) {
+    margin-bottom: 10px;
+  }
+}
+
+.header-contacts__item_position:not(:last-child) {
+  @media screen and (min-width: 1200px) {
+    margin-right: 50px;
+  }
+}
 
 .site-nav__link_current {
   text-decoration: none;
@@ -172,9 +190,9 @@
   color: var(--hover-color);
 }
 
-// .site-nav__item {
-//   position: relative;
-// }
+.site-nav__item {
+  position: relative;
+}
 
 .site-nav__item {
   position: relative;
@@ -192,37 +210,26 @@
   }
 }
 
-// .header-contacts__icon_position {
-//   margin-right: 10px;
-// }
+.header-contacts__icon_position {
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+  }
+}
 
-// .header-contacts__link {
-//   display: flex;
-//   align-items: center;
-//   justify-content: center;
-//   text-decoration: none;
-//   font-weight: 500;
-//   font-size: 14px;
-//   line-height: 1.14;
-//   letter-spacing: 0.02em;
-//   color: var(--title-text-color);
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//   &:hover,
-//   &:focus {
-//     text-decoration: none;
-//     color: var(--hover-color);
-//   }
-// }
+.header-contacts__icon_position {
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
+  }
+}
 
 .header-contacts__link {
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   text-decoration: none;
   font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.02em;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -232,8 +239,15 @@
     text-decoration: none;
     color: var(--hover-color);
   }
+
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.14;
+  }
 }
 
-// .header__info {
-//   margin-left: auto;
-// }
+.header__info {
+  @media screen and (min-width: 768px) {
+    margin-left: auto;
+  }
+}
