--- a/css/main.css
+++ b/css/main.css
@@ -517,12 +517,6 @@ img {
   }
 }
 
-@media screen and (max-width: 1200px) {
-  .header-contacts__item_position:not(:last-child) {
-    margin-bottom: 10px;
-  }
-}
-
 @media screen and (min-width: 1200px) {
   .header-contacts__item_position:not(:last-child) {
     margin-right: 50px;
@@ -578,6 +572,7 @@ img {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.02em;
+  margin-bottom: 10px;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -591,6 +586,7 @@ img {
   .header-contacts__link {
     font-size: 14px;
     line-height: 1.14;
+    margin-bottom: 0;
   }
 }
 
