--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -169,11 +169,11 @@
 //   margin-right: 15px;
 // }
 
-.header-contacts__item_position:not(:last-child) {
-  @media screen and (max-width: 1200px) {
-    margin-bottom: 10px;
-  }
-}
+// .header-contacts__item_position:not(:last-child) {
+//   @media screen and (min-width: 1200px) {
+//     margin-bottom: 0;
+//   }
+// }
 
 .header-contacts__item_position:not(:last-child) {
   @media screen and (min-width: 1200px) {
@@ -231,6 +231,7 @@
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.02em;
+  margin-bottom: 10px;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -243,6 +244,7 @@
   @media screen and (min-width: 1200px) {
     font-size: 14px;
     line-height: 1.14;
+    margin-bottom: 0;
   }
 }
 
