--- a/css/main.css
+++ b/css/main.css
@@ -474,7 +474,7 @@ img {
   color: var(--accent-color);
 }
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
   .header-contacts__list {
     display: flex;
     flex-direction: column;
@@ -482,7 +482,7 @@ img {
   }
 }
 
-@media screen and (max-width: 1200px) and (max-width: 768px) {
+@media screen and (max-width: 1199px) and (max-width: 768px) {
   .header-contacts__list {
     display: none;
   }
@@ -547,6 +547,12 @@ img {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .header-contacts__item:not(:last-child) {
+    margin-bottom: 10px;
+  }
+}
+
 @media screen and (min-width: 1200px) {
   .header-contacts__item_position:not(:last-child) {
     margin-right: 50px;
@@ -560,10 +566,6 @@ img {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--hover-color);
-}
-
-.site-nav__item {
-  position: relative;
 }
 
 .site-nav__item {
@@ -602,7 +604,6 @@ img {
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.02em;
-  margin-bottom: 10px;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
