--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -101,7 +101,7 @@
 }
 
 .header-contacts__list {
-  @media screen and (max-width: 1200px) {
+  @media screen and (max-width: 1199px) {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -175,11 +175,11 @@
 //   margin-right: 15px;
 // }
 
-// .header-contacts__item_position:not(:last-child) {
-//   @media screen and (min-width: 1200px) {
-//     margin-bottom: 0;
-//   }
-// }
+.header-contacts__item:not(:last-child) {
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 10px;
+  }
+}
 
 .header-contacts__item_position:not(:last-child) {
   @media screen and (min-width: 1200px) {
@@ -194,10 +194,6 @@
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--hover-color);
-}
-
-.site-nav__item {
-  position: relative;
 }
 
 .site-nav__item {
@@ -237,7 +233,6 @@
   font-size: 12px;
   line-height: 1.16;
   letter-spacing: 0.02em;
-  margin-bottom: 10px;
   color: var(--title-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
