--- a/scss/base/_common.scss
+++ b/scss/base/_common.scss
@@ -51,6 +51,9 @@ img {
 .clients-item,
 .social-item,
 .footer-adress,
-.item-social {
+.item-social,
+.mobile-menu__nav,
+.mobile-menu__contacts,
+.social-mobile {
   list-style: none;
 }
