--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,10 @@ img {
 .clients-item,
 .social-item,
 .footer-adress,
-.item-social {
+.item-social,
+.mobile-menu__nav,
+.mobile-menu__contacts,
+.social-mobile {
   list-style: none;
 }
 
@@ -407,63 +410,6 @@ img {
     display: flex;
     align-items: center;
   }
-}
-
-/* БУРГЕР */
-.burger-btn {
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  padding: 0;
-  margin-left: auto;
-  line-height: 0;
-}
-
-@media screen and (min-width: 768px) {
-  .burger-btn {
-    display: none;
-  }
-}
-
-.burger-btn__icon:hover, .burger-btn__icon:focus {
-  fill: var(--hover-color);
-}
-
-.mobile-menu {
-  position: fixed;
-  z-index: 100;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 48px 40px;
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  background-color: #d7dad1;
-  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.mobile-menu.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: all;
-}
-
-.mobile-menu__close {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-  background-color: transparent;
-  cursor: pointer;
-  border: none;
-  padding: 0;
-  margin-left: auto;
-  line-height: 0;
-}
-
-.mobile-menu__icon:hover, .mobile-menu__icon:focus {
-  fill: var(--hover-color);
 }
 
 .header-contacts__list {
@@ -1070,5 +1016,143 @@ img {
 .item-social {
   width: 44px;
   height: 44px;
+}
+
+/* БУРГЕР */
+.burger-btn {
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  margin-left: auto;
+  line-height: 0;
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+}
+
+.burger-btn__icon:hover, .burger-btn__icon:focus {
+  fill: var(--hover-color);
+}
+
+.mobile-menu {
+  position: fixed;
+  z-index: 100;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  background-color: var(--accent-color);
+  transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: all;
+}
+
+.mobile-menu__close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  background-color: transparent;
+  cursor: pointer;
+  border: none;
+  padding: 0;
+  margin-left: auto;
+  line-height: 0;
+}
+
+.mobile-menu__icon:hover, .mobile-menu__icon:focus {
+  fill: var(--hover-color);
+}
+
+.mobile-menu__nav-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__nav-link {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  text-align: center;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--primary-text-color);
+}
+
+.mobile-menu__contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-menu__contacts-item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu__contacts-link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--hover-color);
+}
+
+.mobile-menu__contacts-link--mail-theme {
+  font-size: 24px;
+  line-height: 1.16;
+  letter-spacing: 0.02em;
+  color: var(--title-text-color);
+}
+
+.social-mobile {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.social-mobile:not(:last-child) {
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+  transform: rotate(90deg);
+}
+
+.social-mobile__item:not(:first-child) {
+  padding-left: 10px;
+}
+
+.social-mobile__item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.social-mobile__link {
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--hover-color);
+}
+
+.mobile-menu__nav-link--current {
+  color: var(--hover-color);
+}
+
+.mobile {
+  display: flex;
+  flex-direction: column;
+}
+
+.mobile-menu__contacts {
+  margin-top: auto;
 }
 /*# sourceMappingURL=main.css.map */
