--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -30,11 +30,11 @@
   }
 }
 
-@media screen and (min-width: 480px) and (max-width: 767px) {
-  .container {
-    width: 480px;
-  }
-}
+// @media screen and (min-width: 480px) and (max-width: 767px) {
+//   .container {
+//     width: 480px;
+//   }
+// }
 
 /* button */
 .button-hero {
