--- a/css/main.css
+++ b/css/main.css
@@ -204,8 +204,8 @@ img {
 
 .modal {
   position: absolute;
-  width: 528px;
-  min-height: 581px;
+  width: 450px;
+  min-height: 609px;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
@@ -213,6 +213,19 @@ img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+@media screen and (max-width: 1199px) {
+  .modal {
+    max-width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    min-height: 581px;
+  }
 }
 
 .modal-form {
@@ -586,14 +599,19 @@ img {
 .hero {
   max-width: 479px;
   margin: 0 auto;
-  padding-top: 118px;
-  padding-bottom: 118px;
   text-align: center;
   background: #2f303a;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/img/hero/hero.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+}
+
+@media (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    max-width: 767px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/img/hero/hero-tablet.jpg);
+  }
 }
 
 @media screen and (max-width: 1199px) {
@@ -1055,6 +1073,7 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  overflow: auto;
   background-color: var(--accent-color);
   transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
