--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -10,10 +10,7 @@
 
 .hero {
   max-width: 479px;
-  // height: 400px;
   margin: 0 auto;
-  padding-top: 118px;
-  padding-bottom: 118px;
   text-align: center;
   background: #2f303a;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
@@ -23,18 +20,20 @@
   background-size: cover;
 }
 
+@media (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    max-width: 767px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/img/hero/hero-tablet.jpg);
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .hero {
     padding-top: 118px;
     padding-bottom: 118px;
   }
 }
-
-// @media screen and (min-width: 480px) and (max-width: 767px) {
-//   .container {
-//     width: 480px;
-//   }
-// }
 
 /* button */
 .button-hero {
