--- a/scss/layout/_mobile.scss
+++ b/scss/layout/_mobile.scss
@@ -30,6 +30,7 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
+  overflow: auto;
   background-color: var(--accent-color);
   transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
