--- a/css/main.css
+++ b/css/main.css
@@ -1073,7 +1073,6 @@ img {
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  overflow: auto;
   background-color: var(--accent-color);
   transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1143,6 +1142,7 @@ img {
 .social-mobile {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 48px;
 }
 
 .social-mobile:not(:last-child) {
