--- a/scss/layout/_mobile.scss
+++ b/scss/layout/_mobile.scss
@@ -30,7 +30,6 @@
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
-  overflow: auto;
   background-color: var(--accent-color);
   transition: opasity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -106,6 +105,7 @@
 .social-mobile {
   display: flex;
   flex-wrap: wrap;
+  margin-bottom: 48px;
 }
 
 .social-mobile:not(:last-child) {
