--- a/scss/layout/_hero.scss
+++ b/scss/layout/_hero.scss
@@ -28,6 +28,25 @@
   }
 }
 
+@media (min-width: 1200px) {
+  .hero {
+    max-width: 1600px;
+    height: 600px;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+      url(../images/img/hero/hero-desktop.jpg);
+  }
+}
+
+@media (min-width: 1200px) {
+  .hero-title {
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 1.36;
+  }
+}
+
 @media screen and (max-width: 1199px) {
   .hero {
     padding-top: 118px;
