--- a/css/main.css
+++ b/css/main.css
@@ -355,11 +355,18 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
   margin-bottom: 30px;
+  font-size: 12px;
+  line-height: 1.16;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form-checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form-checkbox:checked + .modal-form-checkbox-label::before {
@@ -374,12 +381,19 @@ img {
 }
 
 .conditions {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   text-decoration: none;
   position: relative;
   color: var(--hover-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .conditions {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .line:before {
@@ -390,7 +404,13 @@ img {
   background: var(--hover-color);
   border-radius: 2px;
   left: 0;
-  bottom: 5px;
+  bottom: -0.5px;
+}
+
+@media screen and (min-width: 1200px) {
+  .line:before {
+    bottom: 5px;
+  }
 }
 
 .page-header__container {
@@ -724,11 +744,22 @@ img {
   padding-bottom: 0;
 }
 
+.features-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .section-icons {
-  width: 270px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
+  display: block;
+  margin-bottom: 30px;
+  padding: 25px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .section-title {
