--- a/scss/components/_modal-form.scss
+++ b/scss/components/_modal-form.scss
@@ -126,11 +126,18 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 14px;
-  line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
   margin-bottom: 30px;
+  font-size: 12px;
+  line-height: 1.16;
+}
+
+@media screen and (min-width: 1200px) {
+  .modal-form-checkbox-label {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .modal-form-checkbox:checked + .modal-form-checkbox-label::before {
@@ -145,12 +152,19 @@
 }
 
 .conditions {
-  font-size: 14px;
-  line-height: 1.71;
+  font-size: 12px;
+  line-height: 1.16;
   letter-spacing: 0.03em;
   text-decoration: none;
   position: relative;
   color: var(--hover-color);
+}
+
+@media screen and (min-width: 1200px) {
+  .conditions {
+    font-size: 14px;
+    line-height: 1.71;
+  }
 }
 
 .line:before {
@@ -161,5 +175,11 @@
   background: var(--hover-color);
   border-radius: 2px;
   left: 0;
-  bottom: 5px;
+  bottom: -0.5px;
+}
+
+@media screen and (min-width: 1200px) {
+  .line:before {
+    bottom: 5px;
+  }
 }
