--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -30,14 +30,20 @@
   padding-bottom: 0;
 }
 
+.features-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
 .section-icons {
-  width: 270px;
   height: 120px;
   background-color: #f5f4fa;
   border-radius: 4px;
-  // display: block;
-  // margin-bottom: 30px;
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
+  display: block;
+  margin-bottom: 30px;
+  padding: 25px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
