--- a/css/main.css
+++ b/css/main.css
@@ -740,8 +740,21 @@ img {
 
 .text-features,
 .text {
-  width: 270px;
+  width: 100%;
   padding-bottom: 0;
+}
+
+.title-features {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .text-features:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .features-list {
