--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -26,8 +26,22 @@
 
 .text-features,
 .text {
-  width: 270px;
+  // width: 270px;
+  width: 100%;
   padding-bottom: 0;
+}
+
+.title-features {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 10px;
+}
+
+@media screen and (max-width: 767px) {
+  .text-features:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .features-list {
