--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -24,18 +24,36 @@
 //   margin-left: 30px;
 // }
 
+// t
 .text-features,
 .text {
   // width: 270px;
   width: 100%;
   padding-bottom: 0;
+
+  @media screen and (min-width: 767px) {
+    width: 354px;
+  }
+}
+
+.text-features {
+  margin: 15px;
+}
+
+// t
+.features-list {
+  margin-left: -15px;
+  margin-right: -15px;
 }
 
 .title-features {
   display: flex;
   align-items: center;
-  justify-content: center;
   margin-bottom: 10px;
+
+  @media screen and (max-width: 767px) {
+    justify-content: center;
+  }
 }
 
 @media screen and (max-width: 767px) {
