--- a/scss/layout/_features.scss
+++ b/scss/layout/_features.scss
@@ -27,7 +27,6 @@
 // t
 .text-features,
 .text {
-  // width: 270px;
   width: 100%;
   padding-bottom: 0;
 
@@ -38,6 +37,20 @@
 
 .text-features {
   margin: 15px;
+}
+
+@media screen and (min-width: 1199px) {
+  .text-features {
+    width: 270px;
+    width: calc((100% - 15 * 2) / 2);
+  }
+}
+
+@media screen and (min-width: 1199px) {
+  .text {
+    width: 270px;
+    width: calc((100% - 15 * 2) / 2);
+  }
 }
 
 // t
