--- a/scss/layout/_directions.scss
+++ b/scss/layout/_directions.scss
@@ -5,15 +5,15 @@
   color: var(--primary-text-color);
 }
 
-// .title-features {
-//   margin-bottom: 10px;
-// }
+.title-features {
+  margin-bottom: 10px;
+}
 
-// .section-title {
-//   display: flex;
-//   justify-content: center;
-//   margin-bottom: 50px;
-// }
+.section-title {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 50px;
+}
 
 .directions-name {
   font-weight: bold;
@@ -32,20 +32,23 @@
   width: 100%;
 }
 
-// .directions-info {
-//   position: relative;
-// }
-
-// .directions {
-//   display: flex;
-//   margin-left: -30px;
-// }
-
-.directions-title {
-  padding-top: 0;
+.directions-info {
+  position: relative;
 }
 
-// .directions-images {
-//   flex-basis: calc(100% / 3 - 370px);
-//   margin-left: 30px;
-// }
+.directions {
+  display: flex;
+  margin-left: -30px;
+}
+
+.directions-title {
+  @media screen and (max-width: 1199px) {
+    display: none;
+    padding-top: 0;
+  }
+}
+
+.directions-images {
+  flex-basis: calc(100% / 3 - 370px);
+  margin-left: 30px;
+}
