--- a/css/main.css
+++ b/css/main.css
@@ -906,6 +906,7 @@ img {
 .team {
   display: flex;
   flex-wrap: wrap;
+  align-items: baseline;
   margin-left: -15px;
 }
 
@@ -926,31 +927,6 @@ img {
   margin-left: 15px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-}
-
-@media screen and (max-width: 767px) {
-  .team-images:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-
-@media screen and (max-width: 767px) and (min-width: 768px) {
-  .team-images {
-    margin: 15px;
-    flex-basis: calc((100%-60px) / 2);
-  }
-}
-
-@media screen and (max-width: 767px) and (min-width: 1200px) {
-  .team-images {
-    flex-basis: calc((100% - 120px) / 4);
-  }
-}
-
-@media screen and (max-width: 1199px) {
-  .team-images {
-    max-width: 100%;
-  }
 }
 
 .team-images:not(:last-child) {
