--- a/scss/components/_container.scss
+++ b/scss/components/_container.scss
@@ -1,6 +1,7 @@
 .container {
   padding: 0px 15px;
   margin: 0 auto;
+  height: auto;
   outline: 2px solid red;
 
   @media screen and (min-width: 480px) {
