--- a/scss/components/_social-link.scss
+++ b/scss/components/_social-link.scss
@@ -2,12 +2,12 @@
   display: flex;
   align-items: center;
   margin-top: 16px;
-  padding-left: 122px;
-  padding-right: 122px;
+  // padding-left: 122px;
+  // padding-right: 122px;
 
   @media screen and (min-width: 767px) {
-    padding-left: 74px;
-    padding-right: 74px;
+    // padding-left: 74px;
+    // padding-right: 74px;
   }
 
   @media screen and (min-width: 1199px) {
