--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -18,18 +18,17 @@
 .team {
   display: flex;
   flex-wrap: wrap;
-  align-items: baseline;
-
-  // flex-direction: column;
   margin-left: -15px;
 
-  @media screen and (min-width: 767px) {
+  @media screen and (min-width: 1199px) {
+    display: flex;
+    margin-left: -30px;
   }
 }
 
 .team-info {
   padding-top: 30px;
-  padding-bottom: 24px;
+  padding-bottom: 30px;
 
   @media screen and (min-width: 1199px) {
     padding-top: 30px;
@@ -38,31 +37,15 @@
 }
 
 .team-images {
-  background: #ffffff;
   margin-left: 15px;
+  background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
 
-  // @media screen and (max-width: 767px) {
-  //   &:not(:last-child) {
-  //     margin-bottom: 30px;
-  //   }
-  //   @media screen and (min-width: 768px) {
-  //     margin: 15px;
-  //     flex-basis: calc((100%-60px) / 2);
-  //   }
-  //   @media screen and (min-width: 1200px) {
-  //     flex-basis: calc((100% - 120px) / 4);
-  //   }
-  // }
-
-  // @media screen and (max-width: 1199px) {
-  //   max-width: 100%;
-  // }
-}
-
-.team-images:not(:last-child) {
-  margin-bottom: 30px;
+  @media screen and (min-width: 1199px) {
+    flex-basis: calc(100% / 4 - 270px);
+    margin-left: 30px;
+  }
 }
 
 .team .text,
