--- a/scss/layout/_directions.scss
+++ b/scss/layout/_directions.scss
@@ -1,6 +1,6 @@
 .section-title {
   font-size: 28px;
-  line-height: 1.17px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 
