--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -7,14 +7,14 @@
 }
 
 .clients-item {
-  @media screen and (max-width: 1199px) {
-    margin: 15px;
-  }
-}
+  margin: 15px;
 
-.clients-item:not(:last-child) {
-  @media screen and (min-width: 1199px) {
-    margin-right: 30px;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 6 * 30px) / 6);
   }
 }
 
