--- a/scss/layout/_directions.scss
+++ b/scss/layout/_directions.scss
@@ -19,9 +19,12 @@
 .section-title {
   display: flex;
   justify-content: center;
-  margin-bottom: 15px;
 
-  @media screen and (min-width: 1199px) {
+  @media screen and (max-width: 1199px) {
+    margin-bottom: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
     margin-bottom: 50px;
   }
 }
