--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -41,32 +41,32 @@
   }
 }
 
-// .footer-logo {
-//   display: flex;
-//   margin-bottom: 20px;
-// }
+.footer-logo {
+  display: flex;
+  margin-bottom: 20px;
+}
 
-// .contacts .adress {
-//   display: flex;
-//   margin-bottom: 9px;
-// }
+.contacts .adress {
+  display: flex;
+  margin-bottom: 9px;
+}
 
-// .footer-adress {
-//   display: flex;
-//   flex-direction: column;
-// }
+.footer-adress {
+  display: flex;
+  flex-direction: column;
+}
 
-// .contacts-footer {
-//   margin-bottom: 9px;
-// }
+.contacts-footer {
+  margin-bottom: 9px;
+}
 
-// .contacts .adress {
-//   display: inline-block;
-// }
+.contacts .adress {
+  display: inline-block;
+}
 
 .adress-footer {
-  // display: flex;
-  // align-items: center;
+  display: flex;
+  align-items: center;
   font-style: normal;
   font-size: 14px;
   line-height: 1.71;
@@ -91,13 +91,20 @@
 
 /* footer-send */
 
-// .footer-submit {
-//   margin-left: 93px;
-// }
+.footer-submit {
+  margin-left: 93px;
+}
 
 .input-mail-footer {
-  width: 358px;
-  height: 50px;
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    height: 50px;
+  }
+
+  @media screen and (max-width: 479px) {
+    max-width: 100%;
+  }
+
   padding-left: 16px;
   padding-right: 16px;
   padding-top: 15px;
@@ -167,29 +174,45 @@
   // margin-bottom: 20px;
 }
 
-// .footer-info {
-//   display: flex;
-//   align-items: baseline;
-//   justify-content: space-between;
-// }
+.footer-info {
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
+  }
 
-// .join-rights {
-//   margin-left: 70px;
-// }
+  @media screen and (max-width: 479px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
-// .footer-social {
-//   display: flex;
-//   align-items: center;
-// }
+  @media screen and (max-width: 479px) {
+    display: block;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.join-rights {
+  margin-left: 70px;
+}
+
+.footer-social {
+  display: flex;
+  align-items: center;
+}
 
 .link-social {
   width: 100%;
   height: 100%;
-  // display: block;
+  display: block;
   border-radius: 50%;
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   background-color: rgba(255, 255, 255, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
@@ -208,9 +231,9 @@
   }
 }
 
-// .item-social:not(:last-child) {
-//   margin-right: 10px;
-// }
+.item-social:not(:last-child) {
+  margin-right: 10px;
+}
 
 .item-social {
   width: 44px;
