--- a/css/main.css
+++ b/css/main.css
@@ -1320,8 +1320,10 @@ img {
 }
 
 /* footer-send */
-.footer-submit {
-  margin-left: 93px;
+@media screen and (min-width: 1200px) {
+  .footer-submit {
+    margin-left: 93px;
+  }
 }
 
 .input-mail-footer {
@@ -1413,26 +1415,19 @@ img {
   }
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .footer-info {
     display: flex;
-    flex-wrap: wrap;
-  }
-}
-
-@media screen and (max-width: 479px) {
-  .footer-info {
-    display: block;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    margin-left: auto;
-    margin-right: auto;
   }
 }
 
-.join-rights {
-  margin-left: 70px;
+@media screen and (min-width: 1200px) {
+  .join-rights {
+    margin-left: 70px;
+  }
 }
 
 .footer-social {
