--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -179,7 +179,7 @@
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: #ffffff;
-  // margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .footer-info {
@@ -201,6 +201,10 @@
 .join-rights {
   @media screen and (min-width: 1200px) {
     margin-left: 70px;
+  }
+
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
   }
 }
 
