--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -27,6 +27,10 @@
   background: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 /* address */
@@ -50,6 +54,10 @@
 .footer-logo {
   display: flex;
   margin-bottom: 20px;
+
+  @media screen and (max-width: 767px) {
+    display: block;
+  }
 }
 
 .contacts .adress {
@@ -100,6 +108,11 @@
 .footer-submit {
   @media screen and (min-width: 1200px) {
     margin-left: 93px;
+  }
+
+  @media screen and (max-width: 767px) {
+    display: flex;
+    align-items: center;
   }
 }
 
