--- a/scss/components/_social-link.scss
+++ b/scss/components/_social-link.scss
@@ -2,8 +2,7 @@
   display: flex;
   align-items: center;
   margin-top: 16px;
-  padding-left: 122px;
-  padding-right: 122px;
+  justify-content: center;
 
   @media screen and (min-width: 767px) {
     padding-left: 74px;
