--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -123,7 +123,8 @@
   }
 
   @media screen and (max-width: 767px) {
-    max-width: 100%;
+    width: 100%;
+    margin-bottom: 20px;
   }
 
   padding-left: 16px;
@@ -193,6 +194,7 @@
 .icon-btn-footer {
   @media screen and (max-width: 767px) {
     display: flex;
+    flex-direction: column;
   }
 }
 
