--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -19,10 +19,6 @@
   display: flex;
   flex-wrap: wrap;
 
-  @media screen and (max-width: 767px) {
-    margin-left: -15px;
-  }
-
   @media screen and (min-width: 1199px) {
     display: flex;
     margin-left: -30px;
@@ -40,15 +36,10 @@
 }
 
 .team-images {
-  margin-left: 15px;
-  margin-bottom: 15px;
+  width: 100%;
   background: #ffffff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
-
-  @media screen and (max-width: 767px) {
-    margin: 15px;
-  }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: calc((100% - 2 * 30px) / 2);
