--- a/scss/layout/_team.scss
+++ b/scss/layout/_team.scss
@@ -50,6 +50,11 @@
     flex-basis: calc(100% / 4 - 270px);
     margin-left: 30px;
   }
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
+  }
 }
 
 .team .text,
