--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -11,6 +11,10 @@
   @media screen and (max-width: 767px) {
     margin-bottom: 60px;
   }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-right: 165px;
+  }
 }
 
 .logo-white {
@@ -28,7 +32,7 @@
   padding-top: 60px;
   padding-bottom: 60px;
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     text-align: center;
   }
 }
@@ -219,6 +223,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
   }
 }
 
