--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -110,6 +110,10 @@
 /* footer-send */
 
 .footer-submit {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+  }
+
   @media screen and (min-width: 1200px) {
     margin-left: 93px;
   }
@@ -227,6 +231,7 @@
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
+    align-items: center;
   }
 }
 
