--- a/css/main.css
+++ b/css/main.css
@@ -445,6 +445,13 @@ img {
   align-items: center;
 }
 
+@media screen and (max-width: 768px) {
+  .page-header__container {
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+}
+
 @media screen and (min-width: 768px) {
   .site-navigation {
     display: flex;
@@ -1340,6 +1347,7 @@ img {
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-submit {
     display: flex;
+    align-items: flex-start;
   }
 }
 
