--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -112,6 +112,7 @@
 .footer-submit {
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
+    align-items: flex-start;
   }
 
   @media screen and (min-width: 1200px) {
