--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -286,3 +286,10 @@
   width: 44px;
   height: 44px;
 }
+
+.test {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    justify-content: space-between;
+  }
+}
