--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -128,17 +128,29 @@
 .projects {
   display: flex;
   flex-wrap: wrap;
-  // margin-left: -30px;
-  // margin-top: -30px;
+
+  @media screen and (min-width: 767px) {
+    margin: -15px;
+  }
 }
 
 .project-content {
-  // flex-basis: calc((100% - 3 * 30px) / 3);
-  // margin-left: 30px;
-  // margin-top: 30px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
+  }
+
   @media screen and (max-width: 767px) {
-    margin-bottom: 30px;
+    &:not(:last-child) {
+      margin-bottom: 30px;
+    }
   }
 }
 
