--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -118,6 +118,7 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     align-items: flex-start;
+    margin-top: 60px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -137,8 +138,8 @@
     height: 50px;
   }
 
-  @media screen and (max-width: 767px) {
-    width: 100%;
+  @media screen and (max-width: 1199px) {
+    width: 450px;
     margin-bottom: 20px;
   }
 
@@ -192,7 +193,7 @@
     margin-left: 12px;
   }
 
-  @media screen and (max-width: 767px) {
+  @media screen and (max-width: 1199px) {
     margin-left: auto;
     margin-right: auto;
   }
