--- a/css/main.css
+++ b/css/main.css
@@ -1292,6 +1292,13 @@ img {
   }
 }
 
+@media screen and (max-width: 1199px) {
+  .footer-logo {
+    font-size: 24px;
+    line-height: 1.16;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .footer-adress-container {
     margin-bottom: 60px;
@@ -1559,6 +1566,7 @@ img {
 @media screen and (max-width: 767px) {
   .join-rights {
     margin-bottom: 60px;
+    margin-top: 60px;
   }
 }
 
