--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -120,6 +120,7 @@
 /* footer-send */
 
 .footer-submit {
+  width: 100%;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     align-items: flex-start;
@@ -138,7 +139,7 @@
 }
 
 .input-mail-footer {
-  width: 450px;
+  max-width: 450px;
 
   @media screen and (min-width: 1200px) {
     width: 358px;
@@ -146,7 +147,7 @@
   }
 
   @media screen and (max-width: 1199px) {
-    width: 100%;
+    max-width: 450px;
     margin-bottom: 20px;
   }
 
