--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -120,7 +120,6 @@
 /* footer-send */
 
 .footer-submit {
-  width: 100%;
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     align-items: flex-start;
@@ -147,7 +146,7 @@
   }
 
   @media screen and (max-width: 1199px) {
-    max-width: 450px;
+    width: 450px;
     margin-bottom: 20px;
   }
 
