--- a/css/main.css
+++ b/css/main.css
@@ -1403,10 +1403,6 @@ img {
 }
 
 /* footer-send */
-.footer-submit {
-  width: 100%;
-}
-
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .footer-submit {
     display: flex;
@@ -1452,7 +1448,7 @@ img {
 
 @media screen and (max-width: 1199px) {
   .input-mail-footer {
-    max-width: 450px;
+    width: 450px;
     margin-bottom: 20px;
   }
 }
