--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -93,7 +93,7 @@
 }
 
 .adress-footer {
-  display: flex;
+  // display: flex;
   align-items: center;
   font-style: normal;
   font-size: 14px;
@@ -123,6 +123,7 @@
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     display: flex;
     align-items: flex-start;
+    justify-content: center;
     margin-top: 60px;
   }
 
@@ -130,15 +131,15 @@
     margin-left: 93px;
   }
 
-  @media screen and (max-width: 767px) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+  // @media screen and (max-width: 767px) {
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: center;
+  // }
 }
 
 .input-mail-footer {
-  max-width: 450px;
+  width: 100%;
 
   @media screen and (min-width: 1200px) {
     width: 358px;
@@ -146,7 +147,7 @@
   }
 
   @media screen and (max-width: 1199px) {
-    width: 450px;
+    width: 100%;
     margin-bottom: 20px;
   }
 
@@ -246,16 +247,16 @@
   @media screen and (max-width: 767px) {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    // align-items: center;
   }
 
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    display: flex;
-    align-items: baseline;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    text-align: center;
-  }
+  // @media screen and (min-width: 768px) and (max-width: 1199px) {
+  //   display: flex;
+  //   align-items: baseline;
+  //   flex-wrap: wrap;
+  //   justify-content: space-around;
+  //   text-align: center;
+  // }
 }
 
 .join-rights {
@@ -270,7 +271,11 @@
 
 .footer-social {
   display: flex;
-  align-items: center;
+  // align-items: center;
+
+  @media screen and (max-width: 768px) {
+    justify-content: center;
+  }
 }
 
 .link-social {
