--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -136,6 +136,8 @@
 
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 3 * 30px) / 3);
+    display: flex;
+    flex-direction: column;
     margin: 15px;
   }
 
