--- a/scss/layout/_footer.scss
+++ b/scss/layout/_footer.scss
@@ -222,8 +222,8 @@
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
-    display: flex;
-    flex-direction: column;
+    // display: flex;
+    // flex-direction: column;
   }
 }
 
@@ -247,16 +247,15 @@
   @media screen and (max-width: 767px) {
     display: flex;
     flex-direction: column;
-    // align-items: center;
   }
 
-  // @media screen and (min-width: 768px) and (max-width: 1199px) {
-  //   display: flex;
-  //   align-items: baseline;
-  //   flex-wrap: wrap;
-  //   justify-content: space-around;
-  //   text-align: center;
-  // }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
+  }
 }
 
 .join-rights {
@@ -271,7 +270,6 @@
 
 .footer-social {
   display: flex;
-  // align-items: center;
 
   @media screen and (max-width: 768px) {
     justify-content: center;
