--- a/css/main.css
+++ b/css/main.css
@@ -1509,13 +1509,6 @@ img {
   }
 }
 
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .icon-btn-footer {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 .join {
   font-weight: 500;
   font-size: 14px;
@@ -1538,6 +1531,16 @@ img {
   .footer-info {
     display: flex;
     flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .footer-info {
+    display: flex;
+    align-items: baseline;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    text-align: center;
   }
 }
 
