--- a/css/main.css
+++ b/css/main.css
@@ -1236,7 +1236,12 @@ img {
 .projects {
   display: flex;
   flex-wrap: wrap;
-  margin: -15px;
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .projects {
+    margin: -15px;
+  }
 }
 
 .project-content {
