--- a/scss/layout/_portfolio.scss
+++ b/scss/layout/_portfolio.scss
@@ -129,7 +129,10 @@
 .projects {
   display: flex;
   flex-wrap: wrap;
-  margin: -15px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin: -15px;
+  }
 }
 
 .project-content {
