--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -94,17 +94,17 @@
   }
 }
 
-@media (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .site-navigation__logo {
     padding-top: 25px;
     padding-bottom: 25px;
   }
 }
 
-@media (min-width: 480px) and (max-width: 1199px) {
+@media screen and (min-width: 480px) and (max-width: 1199px) {
   .site-nav {
-    padding-top: 26px;
-    padding-bottom: 26px;
+    padding-top: 25px;
+    padding-bottom: 25px;
   }
 }
 
