--- a/scss/layout/_directions.scss
+++ b/scss/layout/_directions.scss
@@ -58,6 +58,11 @@
 .directions-title {
   @media screen and (max-width: 1199px) {
     display: none;
+  }
+}
+
+.directions-title {
+  @media screen and (min-width: 1200px) {
     padding-top: 0;
   }
 }
