--- a/css/main.css
+++ b/css/main.css
@@ -1056,25 +1056,24 @@ img {
   }
 }
 
-.clients-item {
-  margin: 15px;
-}
-
 @media screen and (max-width: 767px) {
   .clients-item {
     flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
   }
 }
 
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .clients-item {
     flex-basis: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
   }
 }
 
 @media screen and (min-width: 1200px) {
   .clients-item {
     flex-basis: calc((100% - 6 * 30px) / 6);
+    margin-right: 30px;
   }
 }
 
