--- a/scss/layout/_clients.scss
+++ b/scss/layout/_clients.scss
@@ -7,18 +7,19 @@
 }
 
 .clients-item {
-  margin: 15px;
-
   @media screen and (max-width: 767px) {
     flex-basis: calc((100% - 2 * 30px) / 2);
+    margin: 15px;
   }
 
   @media screen and (min-width: 768px) and (max-width: 1199px) {
     flex-basis: calc((100% - 3 * 30px) / 3);
+    margin: 15px;
   }
 
   @media screen and (min-width: 1200px) {
     flex-basis: calc((100% - 6 * 30px) / 6);
+    margin-right: 30px;
   }
 }
 
